--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-hook-form": "^6.14.2",
     "react-native": "0.63.4",
     "react-native-config": "^1.4.2",
+    "react-native-flash-message": "^0.1.21",
     "react-native-gesture-handler": "^1.9.0",
     "react-native-modal": "^11.6.1",
     "react-native-reanimated": "^1.13.2",
