--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@react-native-community/datetimepicker": "^3.0.9",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/bottom-tabs": "^5.11.6",
+    "@react-navigation/drawer": "^5.12.3",
     "@react-navigation/native": "^5.9.0",
     "@react-navigation/stack": "^5.14.1",
+    "@reduxjs/toolkit": "^1.5.0",
     "axios": "^0.21.1",
     "date-fns": "^2.16.1",
     "lodash": "^4.17.20",
@@ -28,11 +30,14 @@
     "react-native-config": "^1.4.2",
     "react-native-flash-message": "^0.1.21",
     "react-native-gesture-handler": "^1.9.0",
+    "react-native-masked-text": "^1.13.0",
     "react-native-modal": "^11.6.1",
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.16.1",
     "react-native-svg": "^12.1.0",
+    "react-redux": "^7.2.2",
+    "redux": "^4.0.5",
     "styled-components": "^5.2.1",
     "yup": "^0.32.8"
   },
@@ -42,6 +47,7 @@
     "@react-native-community/eslint-config": "^1.1.0",
     "@types/jest": "^25.2.3",
     "@types/react-native": "^0.63.2",
+    "@types/react-redux": "^7.1.16",
     "@types/react-test-renderer": "^16.9.2",
     "@types/styled-components": "^5.1.7",
     "@types/styled-components-react-native": "^5.1.0",
