✨ Added the create of event #1

--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
+    "android:test": "ENVFILE=.env.test yarn react-native run-android --variant=release",
+    "android:build:test": "ENVFILE=.env.test cd android && ./gradlew assembleRelease",
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "start": "react-native start",
@@ -22,6 +24,7 @@
     "@reduxjs/toolkit": "^1.5.0",
     "axios": "^0.21.1",
     "date-fns": "^2.16.1",
+    "firebase": "^8.2.6",
     "lodash": "^4.17.20",
     "polished": "^4.0.5",
     "react": "16.13.1",
@@ -30,6 +33,7 @@
     "react-native-config": "^1.4.2",
     "react-native-flash-message": "^0.1.21",
     "react-native-gesture-handler": "^1.9.0",
+    "react-native-image-picker": "^3.1.4",
     "react-native-masked-text": "^1.13.0",
     "react-native-modal": "^11.6.1",
     "react-native-reanimated": "^1.13.2",
