--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -167,7 +167,7 @@ android {
         release {
             // Caution! In production, you need to generate your own keystore file.
             // see https://reactnative.dev/docs/signed-apk-android.
-            if(project.env.get("ENVIRONMENT") == "production") {
+            if(project.env.get("ENVIRONMENT") == "production" || project.env.get("ENVIRONMENT") == "homologation") {
                 signingConfig signingConfigs.release
             }else {
                 signingConfig signingConfigs.debug
