✨ Added the opportunities integration #3

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,11 @@ MYAPP_RELEASE_STORE_FILE=name.keystore
 MYAPP_RELEASE_STORE_PASSWORD=name
 MYAPP_RELEASE_KEY_ALIAS=name
 MYAPP_RELEASE_KEY_PASSWORD=name
+
+FIREBASE_API_KEY=value
+FIREBASE_AUTH_DOMAIN=value
+FIREBASE_PROJECT_ID=value
+FIREBASE_STORAGE_BUCKET=value
+FIREBASE_MESSAGING_SEND_ID=value
+FIREBASE_APP_ID=value
+FIREBASE_MEASUREMENT_ID=value
