--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,8 +13,7 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build-test:
+  Build-App:
     # The type of runner that the job will run on
     runs-on: ubuntu-18.04
 
@@ -22,6 +21,13 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
+
+      - uses: actions/cache@v2
+        id: cacheApp
+        with:
+          path: |
+            node_modules
+          key: ${{ runner.os }}-${{ hashFiles('yarn.lock') }}
 
       - name: Create .env file
         uses: Jeconias/create-envfile@v1.0
@@ -49,14 +55,52 @@ jobs:
           java-version: '11.0.10'
       - run: keytool -genkey -v -dname "cn=OlaMundoWeb, ou=OMW, o=none, l=none, st=Rio Grande do Norte, c=RN" -keystore "./android/app/${{ secrets.MYAPP_RELEASE_STORE_FILE }}" -storepass "${{ secrets.MYAPP_RELEASE_STORE_PASSWORD }}" -alias "${{ secrets.MYAPP_RELEASE_KEY_ALIAS }}" -keyalg RSA -keysize 2048 -validity 10000
 
+      - name: Checking cache
+        if: steps.cacheApp.outputs.cache-hit != 'true'
+        run: yarn install --production
+
       - name: Installing dependencies and building APP
         uses: actions/setup-node@v2
         with:
           node-version: '14'
-      - run: yarn install --production && yarn android:build:test
+      - run: yarn android:build:test
 
-      - name: Output APP
+      - name: Sharing App
         uses: actions/upload-artifact@v2
         with:
-          name: Musicando
+          name: MusicandoAPP
           path: android/app/build/outputs/apk/release/app-release.apk
+
+  Release-App:
+    needs: Build-App
+
+    runs-on: ubuntu-18.04
+
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Display structure of downloaded files
+        run: ls -R
+        run: ls android/app/build/outputs/apk/release
+        working-directory: '.'
+
+      - name: Downloading the last version of APP
+        uses: actions/download-artifact@v2
+        with:
+          name: MusicandoApp
+          path: '.'
+
+      - name: Create Release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ github.ref }}
+          release_name: Release ${{ github.ref }}
+          body: |
+            Changes in this Release
+            - First Change
+            - Second Change
+          body_path: ~/new/release
+          draft: true
+          prerelease: true
