--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,20 +41,20 @@ jobs:
       - name: Create .env file
         uses: Jeconias/create-envfile@v1.0
         with:
-          ENVIRONMENT: ${{ secrets.ENVIRONMENT }}
-          API_URL: ${{ secrets.API_URL }}
-          MYAPP_RELEASE_STORE_FILE: ${{ secrets.MYAPP_RELEASE_STORE_FILE }}
-          MYAPP_RELEASE_STORE_PASSWORD: ${{ secrets.MYAPP_RELEASE_STORE_PASSWORD }}
-          MYAPP_RELEASE_KEY_ALIAS: ${{ secrets.MYAPP_RELEASE_KEY_ALIAS }}
-          MYAPP_RELEASE_KEY_PASSWORD: ${{ secrets.MYAPP_RELEASE_KEY_PASSWORD }}
+          INPUT_ENVKEY_ENVIRONMENT: ${{ secrets.ENVIRONMENT }}
+          INPUT_ENVKEY_API_URL: ${{ secrets.API_URL }}
+          INPUT_ENVKEY_MYAPP_RELEASE_STORE_FILE: ${{ secrets.MYAPP_RELEASE_STORE_FILE }}
+          INPUT_ENVKEY_MYAPP_RELEASE_STORE_PASSWORD: ${{ secrets.MYAPP_RELEASE_STORE_PASSWORD }}
+          INPUT_ENVKEY_MYAPP_RELEASE_KEY_ALIAS: ${{ secrets.MYAPP_RELEASE_KEY_ALIAS }}
+          INPUT_ENVKEY_MYAPP_RELEASE_KEY_PASSWORD: ${{ secrets.MYAPP_RELEASE_KEY_PASSWORD }}
 
-          FIREBASE_API_KEY: ${{ secrets.FIREBASE_API_KEY }}
-          FIREBASE_AUTH_DOMAIN: ${{ secrets.FIREBASE_AUTH_DOMAIN }}
-          FIREBASE_PROJECT_ID: ${{ secrets.FIREBASE_PROJECT_ID }}
-          FIREBASE_STORAGE_BUCKET: ${{ secrets.FIREBASE_STORAGE_BUCKET }}
-          FIREBASE_MESSAGING_SEND_ID: ${{ secrets.FIREBASE_MESSAGING_SEND_ID }}
-          FIREBASE_APP_ID: ${{ secrets.FIREBASE_APP_ID }}
-          FIREBASE_MEASUREMENT_ID: ${{ secrets.FIREBASE_MEASUREMENT_ID }}
+          INPUT_ENVKEY_FIREBASE_API_KEY: ${{ secrets.FIREBASE_API_KEY }}
+          INPUT_ENVKEY_FIREBASE_AUTH_DOMAIN: ${{ secrets.FIREBASE_AUTH_DOMAIN }}
+          INPUT_ENVKEY_FIREBASE_PROJECT_ID: ${{ secrets.FIREBASE_PROJECT_ID }}
+          INPUT_ENVKEY_FIREBASE_STORAGE_BUCKET: ${{ secrets.FIREBASE_STORAGE_BUCKET }}
+          INPUT_ENVKEY_FIREBASE_MESSAGING_SEND_ID: ${{ secrets.FIREBASE_MESSAGING_SEND_ID }}
+          INPUT_ENVKEY_FIREBASE_APP_ID: ${{ secrets.FIREBASE_APP_ID }}
+          INPUT_ENVKEY_FIREBASE_MEASUREMENT_ID: ${{ secrets.FIREBASE_MEASUREMENT_ID }}
           file_name: '.env.test'
           directory: '.'
 
