🔖 Fix animation and new release

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -130,11 +130,17 @@ android {
     }
 
     defaultConfig {
+
+        ndkVersion "23.0.7123448"
+
         applicationId "com.musicando"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 8
-        versionName "0.1.8"
+        versionCode 10
+        versionName "0.2.0"
+        ndk {
+            debugSymbolLevel 'SYMBOL_TABLE'
+        }
     }
     splits {
         abi {
