🚧 Working with deals

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "android:build:test": "cd android && ENVFILE=.env.test ./gradlew assembleRelease",
     "android:build:prod": "cd android && ENVFILE=.env.production ./gradlew assembleRelease",
     "android:test": "ENVFILE=.env.test yarn react-native run-android --variant=release",
+    "android:clear": "cd android && ./gradlew clean",
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "start": "react-native start",
